8134857: Inconsistency in maximum TLAB/PLAB size and humongous object size

Align TLAB/PLAB size with exact humongous object size threshold, not that value -1.

Reviewed-by: jmasa, dfazunen